# Arkive

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  unraid-template.xml
backend/: cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: activity.py  auth.py  databases.py  directories.py  discover.py  events.py  jobs.py  logs.py  notifications.py  restore.py  router.py  settings.py  snapshots.py  status.py  storage.py  targets.py
backend/app/core/: activity.py  config.py  database.py  dependencies.py  event_bus.py  exceptions.py  platform.py  security.py
backend/app/models/: activity.py  discovery.py  jobs.py  notifications.py  restore.py  settings.py  snapshots.py  status.py  storage.py  targets.py
backend/app/services/: backup_coverage.py  backup_engine.py  cloud_manager.py  db_dumper.py  discovery.py  discovery_persistence.py  flash_backup.py  notifier.py  orchestrator.py  repo_paths.py  restore_plan.py  scheduler.py
backend/app/templates/: restore_plan.html
backend/app/utils/: log_config.py  subprocess_runner.py
backend/tests/: conftest.py  runtime_qa_api.py  runtime_qa_cli.py
backend/tests/cloud_providers/: conftest.py  test_oauth_flows.py  test_provider_cli.py  test_provider_e2e.py
backend/tests/docker_integration/: __init__.py  conftest.py  test_api_databases.py  test_api_discovery.py  test_cli_docker.py  test_discovery.py  test_docker_dumps.py  test_flash_backup.py  (+2 more)
(+321 files in other folders)
