[project]
name = "arkive"
version = "0.1.0"
description = "Automated disaster recovery for Unraid servers"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-forked>=1.6",
    "pytest-timeout>=2.3",
    "pytest-xdist>=3.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
pretty = true
show_error_codes = true
explicit_package_bases = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
addopts = "--strict-markers"
markers = [
    "slow: long-running tests that should be split from the fast default path",
    "docker: tests that exercise Docker-backed flows or integration harnesses",
    "provider: tests that exercise cloud/storage provider matrices",
    "live: tests intended for live/runtime QA harnesses rather than normal CI",
]
